<resources>
    <string name="app_name">SeNsR UB</string>
    <string name="accelerometer">Accelero</string>
    <string name="gyroscope">GyroScope</string>
    <string name="microphone">microphone</string>
    <string name="proximity">proximity</string>
    <string name="x_value">X Value</string>
    <string name="y_value">Y Value</string>
    <string name="z_value">Z value</string>
    <string name="todo">TODO</string>
    <string name="dgjh">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo66776">TODO</string>
    <string name="magnetic">magnetic</string>
    <string name="gravity">gravity</string>
    <string name="light">Light</string>
    <string name="todo5455">TODO</string>
    <string name="todo1234">TODO</string>
    <string name="textviewg22">TextView</string>
    <string name="textviewg3">TextView</string>
    <string name="textviewl1">TextView</string>
    <string name="textviewl2">TextView</string>
    <string name="textviewm1">TextView</string>
    <string name="textviewm2">TextView</string>
    <string name="textviewg1">TextView</string>
    <string name="textviewg2">TextView</string>
    <string name="textviewp1">TextView</string>
    <string name="textviewp2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="y_axis">Y-axis</string>
    <string name="x_axis">X-axis</string>
    <string name="z_axis">Z-axis</string>
    <string name="luminous_flux">luminous flux</string>
    <string name="centimeters">Centimeters</string>
    <string name="magnetic_field">magnetic field</string>
    <string name="proximity_scensor">proximity scensor</string>
    <string name="todo55667">TODO</string>
    <string name="todo234">TODO</string>
    <string name="curr_accelation">curr accelation</string>
    <string name="prev_accleration">Prev Accleration</string>
    <string name="chnage_in_accelation">Chnage in accelation</string>
    <string name="todo232">TODO</string>
    <string name="todo5446">TODO</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="bharath_reddy_neeruganti">Bharath Reddy Neeruganti</string>
    <string name="accelerorometerhea">Accelerorometer</string>
    <string name="graph">Graph</string>
    <string name="references">References</string>
    <string name="textview">TextView</string>
    <string name="refrences">Refrences</string>
    <string name="link1">
        <a href= "https://developer.android.com/reference/android/hardware/SensorEvent">
            1. https://developer.android.com/reference/android/hardware/SensorEvent</a>

    </string>
    <string name="link2">
        <a href= "https://www.youtube.com/c/StevdzaSan/playlists">
        2. https://www.youtube.com/c/StevdzaSan/playlists</a>

    </string>
    <string name="link3">
        <a href= "https://www.youtube.com/channel/UCUSqKFDbRaaWQTaMN3r4Pbg">
            3. https://www.youtube.com/channel/UCUSqKFDbRaaWQTaMN3r4Pbg</a>

    </string>
    <string name="link4">
        <a href= "https://www.flaticon.com/premium-icon=search">
            4. https://www.flaticon.com/premium-icon</a>

    </string>
    <string name="link5">
        <a href= "https://www.youtube.com/watch?v=Dqg1A4hy-jI">
            5. https://www.youtube.com/watch?v=Dqg1A4hy-jI</a>

    </string>


</resources>