<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".References">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingStart="130dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:text="@string/refrences"
        android:textColor="#176BAE"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="176dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="413dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        android:background="#FDFCFC"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/link1"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDFCFC"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/link2"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        tools:layout_editor_absoluteX="129dp" />
    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDFCFC"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/link3"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        tools:layout_editor_absoluteX="129dp" />
    <TextView
        android:id="@+id/textView34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDFCFC"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/link4"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        tools:layout_editor_absoluteX="129dp" />
    <TextView
        android:id="@+id/textView35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDFCFC"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/link5"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        tools:layout_editor_absoluteX="129dp" />


</androidx.constraintlayout.widget.ConstraintLayout>